--- a/tpl/captcha_form.html
+++ b/tpl/captcha_form.html
@@ -1,5 +1,5 @@
 <div class="gdt-form-field">
-    <label for="<%=field.get_name()%>"><%=field.render_label(Mode.html)%></label>
+    <label for="<%=field.get_name()%>"><%=field.render_label(Mode.render_html)%></label>
     <img src="<%=href%>" onclick="this.src='<%=href%>?t=' + (new Date()).getTime();" />
     <input id="<%=field.get_name()%>" name="<%=field.get_name()%>" type="text"
            pattern="[A-Za-z]{5}"
